--- a/styles.css
+++ b/styles.css
@@ -33,7 +33,7 @@ header {
   max-width: 1200px;
   margin: auto;
   gap: 500px;
-  margin-top: 10px;
+  margin-top: 20px;
 }
 
 .nav-right {
@@ -68,7 +68,7 @@ header {
   color:#f9faf8;
   background-color: #3882f6;
   height: 40px;
-  width: 120px;
+  width: 160px;
   border-radius: 10px;
   border: none;
   font-size: 18px;
@@ -131,15 +131,51 @@ main {
 }
 
 .quote-autor {
-  font-size: 18px;
+  font-size: 24px;
   font-weight: 700;
   margin-bottom: 50px;
   align-self: center;
   margin-left: 550px;
 }
 
+.action {
+  display: flex;
+  flex-direction: row;
+  gap: 150px;
+  background-color: #3882f6;
+  height: 180px;
+  width: 1100px;
+  border-radius: 10px;
+  color:#f9faf8;
+  align-items: center;
+  justify-content: center;
+  margin-top: 100px;
+  margin-bottom: 100px;
+}
 
+.action-title {
+  font-size: 24px;
+  font-weight: 700;
+}
 
+.action-button {
+  height: 40px;
+  width: 160px;
+  border-radius: 10px;
+  border-style: solid;
+  border-color: #f9faf8;
+  background-color: #3882f6;
+  color:#f9faf8;
+  font-size: 18px;
+  font-weight: 600;
+}
 
-
-
+footer {
+  font-size: 18px;
+  background-color: #1f2937;
+  color: #f9faf8;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100px;
+}
